# acq4

./: .bzrignore  .gitignore  .mailmap  .readthedocs.yaml  AGENTS.md  CHANGELOG  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  acq4  acq4-camera.py  acq4.py  cliAnalysis.py  code_of_conduct.md  dataManager.py  dataManagerTest.py  functions.py  genTest.py  manager.py  patch.py  plotWidgetTest.py  protocol.py  pyproject.toml  qtcam.py  rebuildUi.py  reload.py  setup.py  spec-file.txt  test.py  versions
.github/: AUTO_VERSIONING.md
.github/workflows/: auto-version.yml  test.yml
acq4/: DEVICE_LOCKING.md  Interfaces.py  LogWidgetTemplate.py  LogWidgetTemplate.ui  LogWindow.py  Manager.py  __init__.py  __main__.py  logging_config.py
acq4/analysis/: AnalysisHost.py  AnalysisModule.py  __init__.py  image.py
acq4/devices/: AccesOdorDelivery.py  BaseXKeys.py  CoolLEDLightSource.py  DAQSonicator.py  Device.py  FilterSet.py  InteractionSite.py  InteractionSiteArray.py  Joystick.py  Keyboard.py  LightSource.py  MockFilterWheel.py  MockKeyboard.py  MockLightSource.py  MockOdorDelivery.py  MockPressureControl.py  MockSonicator.py  MockStage.py  MockXKeys.py  NewScaleMPM.py  OdorDelivery.py  OptomechDevice.py  PrairieStage.py  PrairieViewImager.py  PrairieViewPhotostimulator.py  RecordingChamber.py  Screen.py  Sensapex.py  SensapexObjectiveChanger.py  SensapexPressureControl.py  Sonicator.py  Sonicator_test.py  StageSwitch.py  ThorlabsDC4100.py  VimbaXCamera.py  WaterSensor.py  XKeys.py  __init__.py
acq4/drivers/: SerialDevice.py  sensapex.py
acq4/experiment/: __init__.py  action.py  context.py  exceptions.py  fsm.py  orchestrator.py  protocol.py  registry.py
acq4/filetypes/: Analyze75.py  CSVFile.py  FileType.py  FlatDict.py  ImageFile.py  MetaArray.py  MultiPatchLog.py  NotebookFile.py  PhotostimulationLog.py  PrairieViewImage.py  PyQTGraphConfigFile.py  YamlFile.py  __init__.py  filetypes.py
acq4/mcp/: KNOWN_ISSUES.md  README.md  __init__.py  connection.py  host.py  server.py  ssh_tunnel.py
acq4/modules/: AutomationDebug.py  CCFViewer.py  CameraCalibrator.py  Debugger.py  Module.py  NoiseMonitor.py  PipetteDetector.py  Profiler.py  SolutionEditor.py  TaskMonitor.py  Tools.py  Visualize3D.py  __init__.py
acq4/motion/: __init__.py  default_planner.py  executor.py  geometry_aware_planner.py  minirig_v1.py  plan.py  planner.py  spec.py
acq4/pyqtgraph/: Point.py  Qt.py  SRTTransform.py  SRTTransform3D.py  SignalProxy.py  Transform3D.py  Vector.py  WidgetGroup.py  __init__.py  colormap.py  configfile.py  debug.py  exceptionHandling.py  frozenSupport.py  functions.py  numpy_fix.py  ordereddict.py  pgcollections.py  ptime.py  python2_3.py  reload.py
acq4/util/: ComboBox.py  DataManager.py  DictView.py  ForkedIterator.py  HelpfulException.py  InterfaceCombo.py  LogWidgetTemplate.py  LogWidgetTemplate.ui  LogWidgetTemplate_pyqt5.py  LogWindow.py  MockPrairieView.py  MultiPatchLog.py  Mutex.py  NamedWidgets.py  PrairieView.py  PromptUser.py  PySideImporter.py  Qt.py  Qt.pyi  SequenceRunner.py  StateSolver.py  StatusBar.py  Thread.py  advancedTypes.py  approx.py  codeEditor.py  configfile.py  contexts.py  cuda.py  debug.py  function_profiler.py  functions.py  future.py  gentle.py  geometry.py  gitversion.py  igorpro.py  imageAnalysis.py  image_registration.py  json_encoder.py  (+26 more)
canvas/: Canvas.py
config/: camonly.cfg  default.cfg  default_nodevs.cfg  devices.cfg  folderTypes.cfg  mock.cfg  style.css  test.cfg  users.cfg
config/example/: default.cfg  devices.cfg  folderTypes.cfg
config/examples/: devices-mock.cfg  multiclamp.cfg  notes.txt  users.cfg
config/protocols/: I0_10sec  Shock
console/: template_pyqt.py
doc/: .gitignore  .readthedocs.yaml  Makefile  analysis.txt  installation.txt  make.bat  render_images.py  requirements.txt  todo
doc/source/: conf.py  index.rst
dockarea/: DockArea.py
documentation/: outline.txt  things_that_crash_pyqt.txt
documentation/source/: conf.py  index.rst
exporters/: CSVExporter.py
flowchart/: Flowchart.py
graphicsItems/: AxisItem.py  GradientEditorItem.py  GraphicsItem.py  HistogramLUTItem.py  ImageItem.py  InfiniteLine.py  PlotCurveItem.py  PlotDataItem.py  ROI.py
graphicsItems/ViewBox/: ViewBox.py
imageview/: ImageView.py
junk/: mockup.py  mockup.ui  protocol_test.py  test.py
lib/: DataManager.py  DeviceManager.py  Interfaces.py  LogWidgetTemplate.py  LogWidgetTemplate.ui  LogWindow.py  LogWindowTemplate.py  LogWindowTemplate.ui  Manager.py
lib/analysis/: AnalysisHost.py  AnalysisModule.py  AnalyzerTemplate.py  AnalyzerTemplate.ui  DataModel.py  EventDetectionCtrlTemplate.py  EventDetectionCtrlTemplate.ui  StdpCtrlTemplate.py  StdpCtrlTemplate.ui  UncagingControlTemplate.py  UncagingControlTemplate.ui  analyzer.py  caImagingAnalysis.py  modules.py  mosaicEditor.py  stdpCtrlTemplate.ui
lib/devices/: Device.py  MockStage.py  OptomechDevice.py  QCam.py  RigidDevice.py  Screen.py
lib/drivers/: SerialDevice.py
lib/filetypes/: Analyze75.py  CSVFile.py  FileType.py  FlatDict.py  ImageFile.py  MetaArray.py  (+3 more)
metaarray/: MetaArray.py
multiprocess/: processes.py
parametertree/: Parameter.py  parameterTypes.py
pyqtgraph/: exceptionHandling.py  functions.py
requirements/: pyside2.in  pyside2.yml  qt5.yml
tests/: plotWidgetTest.py  teleprox_queue_worker_helper.py  test.py  test_debug_stage_controller.py  test_debug_stage_controller_advanced.py  test_functions.py  test_future.py  test_gentle.py  test_geometry.py  test_sequencer.py  test_teleprox_context.py  test_threadrun.py  test_worker_thread_context.py
tools/: Dockerfile.py2  Dockerfile.py2pyside2  Dockerfile.py2qt4  Dockerfile.py2qt5  Dockerfile.py3  Dockerfile.py3pyside2  Dockerfile.py3qt4  Dockerfile.py3qt5  acq4.bat  create_lnk.py  entry.py  find-surface.py  generateChangelog.py  index_search.py  innosetup.iss  install.bat  install.sh  ma-to-tiff.py  rebuildUi.py  rename_conda_env.py  setVersion.py  system_monitor.py  test_daemon.py  test_target_tracking.ipynb  view_multi_patch_log.py  z_stack_splitter.py
widgets/: ComboBox.py  SpinBox.py
(+2339 files in other folders)
