[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acq4"
dynamic = ["version"]
description = "Neurophysiology acquisition and analysis platform"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Luke Campagnola", email = "lukec@alleninstitute.org" },
]
keywords = ["neurophysiology", "electrophysiology", "microscopy", "patch clamp"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "coorx",
    "docstring_parser",
    "guppy3",
    "h5py",
    "matplotlib",
    "MetaArray",
    "neuroanalysis",
    "numba",
    "numpy",
    "pandas",
    "pillow",
    "psutil",
    "pyopengl",
    "pyqt5",
    "pyqtgraph @ git+https://github.com/acq4/pyqtgraph.git@acq4_working",
    "python-json-logger",
    "pyyaml",
    "rtprofile",
    "scikit-image",
    "scipy",
    "teleprox",
    "tifffile",
    "trimesh",
    "vispy",
]

[project.optional-dependencies]
nidaq = ["pydaqmx"]
micromanager = ["pymmcore"]
sensapex = ["sensapex"]
scientifica = ["pyserial"]
multiclamp = ["pyparsing", "pywin32"]
falconoptics = [
    "pytic",
    "falconoptics @ git+https://github.com/AllenInstitute/falconoptics",
]
thorlabs = ["pyserial"]
dovermotion = ["pythonnet"]
vimbax = ["vmbpy"]
analysis = [
    "pycsf @ git+https://github.com/campagnola/pycsf",
    "ccfviewer @ git+https://github.com/campagnola/ccfviewer",
]
ml-models = [
    "cellpose @ git+https://github.com/outofculture/cellpose.git@_working",
    "matplotlib",
    "opencv-contrib-python-headless",
    "opencv-python-headless",
    "scikit-learn",
    "torch",
    "torchvision",
]
dev = [
    "pytest",
    "black",
]
docs = [
    "numpydoc>=1.1.0",
    "Sphinx>=4.1.2",
    "sphinx-rtd-theme>=0.5.2",
]

[project.urls]
Homepage = "http://www.acq4.org"
Repository = "https://github.com/acq4/acq4"
Documentation = "http://www.acq4.org"

[tool.setuptools]
packages = { find = { include = ["acq4*"] } }

[tool.setuptools.package-data]
acq4 = ["**/*.ui"]

[tool.setuptools.dynamic]
version = { attr = "acq4.__version__" }
